--- a/grc338/website-content-hierarchy/location.html
+++ b/grc338/website-content-hierarchy/location.html
@@ -8,11 +8,11 @@
             <meta http-equiv="Expires" content="0" />  
             <title>Location</title>  
             <header>
-                <h1><img src="morninglavenderlogo.png" alt="Morning Lavender Logo"></h1>
+                <a href="index.html">
+                    <img src="morninglavenderlogo.png" alt="Morning Lavender Logo">
             </header>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="location.html">Location</a></li>
@@ -25,8 +25,8 @@
          <figure>
             <img src="boutique.jpg" alt="A rack of dresses is set in a colorful and pink storefront.">
         </figure> 
-        <p>330 El Camino Real</p>
-        <p>Tustin, CA 92780</p>
-        <p>(714) 486-1429</p> 
+        <address>330 El Camino Real
+        Tustin, CA 92780
+        </address> 
         </body>  
     </html>
