--- a/grc338/website-content-hierarchy/menu.html
+++ b/grc338/website-content-hierarchy/menu.html
@@ -6,13 +6,13 @@
             <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />  
             <meta http-equiv="Pragma" content="no-cache" />  
             <meta http-equiv="Expires" content="0" />  
-            <title>Menu</title>  
+            <title>Location</title>  
             <header>
-                <h1><img src="morninglavenderlogo.png" alt="Morning Lavender Logo"></h1>
+                <a href="index.html">
+                    <img src="morninglavenderlogo.png" alt="Morning Lavender Logo">
             </header>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="location.html">Location</a></li>
