--- a/grc338/website-responsive/index.html
+++ b/grc338/website-responsive/index.html
@@ -10,6 +10,7 @@
             <title>Home</title>  
         </head>   
         <body>  
+            <div class="header">
             <header>
                 <a href="index.html">
                     <img src="morninglavenderlogo.png" alt="Morning Lavender Logo" 
@@ -17,6 +18,7 @@
                     height="auto"
                     />
             </header>
+            </div>
             <nav>
                 <ul>
                     <li><a href="about.html">About</a></li>
@@ -30,7 +32,6 @@
                             width="100%"
                             height="auto"/>
                     </figure>    
-                   
                     <h2>Bonjour!</h2>
                     <p>We're happy to announce that our Afternoon Tea Service is resuming February 12 and now open for booking! We are taking reservations 90 days out from the current date for our cute and modern tea service that takes place ONLY on Saturdays and Sundays at 10am, 12:30pm, or 3pm set tea times.</p>
                     <p>Also join us daily for pastries, coffees, and teas on a first come, first serve basis. During the week, our Teapot for Two ($12) with a selection of crafted loose leaf teas is also available. Reservations are only needed for weekend tea services.</p>
@@ -38,3 +39,4 @@
             </div>
         </body>  
     </html>
+
