--- a/grc338/website-responsive/location.html
+++ b/grc338/website-responsive/location.html
@@ -24,7 +24,7 @@
                     <li><a href="location.html">Location</a></li>
                 </ul>
             </nav>
-        <center> <h2>Locations</h2> </center>
+        <h2>Locations</h2> 
          <p>To get the full Morning Lavender experience, be sure to stop by our boutique-cafe concept in Orange County, CA. Our retail associates will be happy to help style your next favorite outfit. We hope to see you soon!</p>   
          <figure>
             <img src="boutique.jpg" alt="A rack of dresses is set in a colorful and pink storefront."
