--- a/grc338/website-first/index.html
+++ b/grc338/website-first/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 
-<html>  
+    <html>  
     <head>  
     <title>GRC-338 CMS Website: First Submission</title>  
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">  
-    <meta http-equiv="refresh" content="0;url=guitar-mushroom-rf98.squarespace.com">  
-</head>
+    <meta http-equiv="refresh" content="0;url=juicyco.squarespace.com">  
+    </head>
 
-<body>
+    <body>
 
-</body>  
-</html>
+    </body>  
+    </html>
