--- a/grc338/website-first/index.html
+++ b/grc338/website-first/index.html
@@ -4,7 +4,7 @@
     <head>  
     <title>GRC-338 CMS Website: First Submission</title>  
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">  
-    <meta http-equiv="refresh" content="0;url=juicyco.squarespace.com">  
+    <meta http-equiv="refresh" content="0;url=https://juicyco.squarespace.com">  
     </head>
 
     <body>
